--- a/app/src/main/res/layout/category_item.xml
+++ b/app/src/main/res/layout/category_item.xml
@@ -35,11 +35,14 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/text_10"
+                android:paddingRight="@dimen/text_5"
+                android:paddingLeft="@dimen/text_5"
                 android:text="f eskfj"
-                android:textAllCaps="true"
                 fontPath="@string/regular_font"
                 tools:ignore="MissingPrefix"
-                android:textSize="@dimen/text_14"/>
+                android:singleLine="true"
+                android:ellipsize="end"
+                android:textSize="@dimen/text_12"/>
         </LinearLayout>
     </android.support.v7.widget.CardView>
 
