--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/text_5"
         android:layout_marginRight="@dimen/text_5"
-        android:layout_marginTop="@dimen/dimen_50">
+        android:layout_marginTop="@dimen/text_5">
 
     </android.support.v7.widget.RecyclerView>
 
