--- a/app/src/main/res/layout/results_activity.xml
+++ b/app/src/main/res/layout/results_activity.xml
@@ -8,43 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:layout_weight=".8">
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-              >
 
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight=".5"
-                android:textSize="20dp"
-                android:text="@string/questions"
-                android:paddingTop="10dp"
-                android:paddingBottom="10dp"
-                android:paddingLeft="10dp"
-                android:textColor="@color/colorBlack"
-
-                />
-                </LinearLayout>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text=" "
-                android:id="@+id/questionDate"
-                android:layout_weight=".5"
-                android:textSize="16dp"
-                android:paddingTop="10dp"
-                android:paddingBottom="10dp"
-                android:gravity="left"
-                android:layout_marginTop="5dp"/>
-            </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -52,9 +16,7 @@
             android:layout_weight=".6">
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-
-        >
+        android:layout_height="match_parent" >
 
         <ImageView
             android:layout_width="wrap_content"
@@ -365,7 +327,7 @@
             android:id="@+id/tryAgain"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:text="try_again"
+            android:text="Try again"
             android:layout_weight=".3"
             android:gravity="center_vertical"
             android:textSize="20dp"
@@ -378,7 +340,7 @@
             android:id="@+id/home"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:text="home_"
+            android:text="Home"
             android:textColor="@color/white"
             android:layout_weight=".5"
             android:textSize="20dp"
