--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="colorBlack">#000000</color>
     <color name="gray">#E6E7E8</color>
     <color name="questionTextDefault">#6D6E70</color>
+    <color name="transparent">@android:color/transparent</color>
 </resources>
