--- a/app/src/main/res/drawable/rounded_corners_red.xml
+++ b/app/src/main/res/drawable/rounded_corners_red.xml
@@ -5,7 +5,7 @@
 <shape
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle"   >
-    <solid android:color="#E25657" />
+    <solid android:color="@color/appcolor" />
 
 
     <corners android:radius="5dp" />
