--- a/app/src/main/res/layout/about_us.xml
+++ b/app/src/main/res/layout/about_us.xml
@@ -16,7 +16,7 @@
             android:orientation="vertical"
             android:padding="@dimen/dimen_20">
 
-    <TextView
+    <!--<TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="About Us:"
@@ -24,7 +24,7 @@
         android:textColor="#7e009f"
         android:gravity="center"
         android:layout_marginTop="@dimen/dimen_20"
-        android:textSize="@dimen/dimen_20"/>
+        android:textSize="@dimen/dimen_20"/>-->
     <TextView
         android:id="@+id/textweblink"
         android:layout_width="match_parent"
