--- a/app/src/main/res/layout/contact_us.xml
+++ b/app/src/main/res/layout/contact_us.xml
@@ -12,14 +12,14 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:padding="@dimen/dimen_20">
-    <TextView
+  <!--  <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/text_contactus"
         android:textAllCaps="true"
         android:textColor="#7e009f"
         android:gravity="center"
-        android:textSize="20sp"/>
+        android:textSize="20sp"/>-->
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
