--- a/app/src/main/res/layout/quesans_activity.xml
+++ b/app/src/main/res/layout/quesans_activity.xml
@@ -62,20 +62,38 @@
             android:orientation="vertical"
             android:layout_marginTop="15dp">
 
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/white"
+            android:orientation="vertical">
 
+            <ImageView
+                android:id="@+id/share"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentTop="true"
+                android:layout_marginEnd="9dp"
+                android:layout_marginRight="9dp"
+                android:background="@mipmap/share"
+                android:paddingBottom="@dimen/text_10" />
 
                 <TextView
                     android:id="@+id/question"
                     android:layout_height="match_parent"
                     android:layout_width="match_parent"
-                    android:padding="10dp"
+                    android:paddingLeft="10dp"
+                    android:paddingRight="10dp"
+                    android:paddingBottom="10dp"
                     android:autoLink="all"
                     android:textSize="15sp"
-                    android:text=""
-                    android:layout_marginBottom="@dimen/text_10"
-                    android:background="@color/white">
+                    android:layout_below="@+id/share"
+                    android:text="rbedbitomu43diom4ui"
+                    android:layout_marginBottom="@dimen/text_10">
                 </TextView>
-
+        </RelativeLayout>
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -83,7 +101,8 @@
                         android:orientation="vertical"
                         android:id="@+id/answers"
                         android:background="@color/white"
-                        android:padding="10dp">
+                        android:padding="10dp"
+                        android:layout_marginTop="@dimen/text_10">
 
                         <LinearLayout
 
@@ -101,7 +120,7 @@
                                 android:text="A"
                                 android:textColor="#6D6E70"
                                 android:background="@drawable/rounded_circle"
-                                android:textSize="12dp"
+                                android:textSize="12sp"
                                 android:gravity="center"
 
                                 />
@@ -110,9 +129,8 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:autoLink="all"
-                                android:textColor="@color/colorPrimary"
                                 android:layout_marginLeft="20dp"
-                                android:textSize="13sp"
+                                android:textSize="14sp"
                                 android:gravity="center_vertical"
 
                                 />
@@ -142,9 +160,8 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:autoLink="all"
-                                android:textColor="@color/colorPrimary"
                                 android:layout_marginLeft="20dp"
-                                android:textSize="13sp"
+                                android:textSize="14sp"
                                 android:gravity="center_vertical"
                                 />
                         </LinearLayout>
@@ -175,9 +192,8 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:autoLink="all"
-                                android:textColor="@color/colorPrimary"
                                 android:layout_marginLeft="20dp"
-                                android:textSize="13sp"
+                                android:textSize="14sp"
                                 android:gravity="center_vertical"
                                 />
                         </LinearLayout>
@@ -207,10 +223,9 @@
                                 android:id="@+id/answer4"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:textColor="@color/colorPrimary"
                                 android:layout_marginLeft="20dp"
                                 android:autoLink="all"
-                                android:textSize="13sp"
+                                android:textSize="14sp"
                                 android:gravity="center_vertical"
                                 />
                         </LinearLayout>
