--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -20,6 +20,10 @@
             android:id="@+id/nav_share"
             android:icon="@mipmap/ic_share"
             android:title="Share App" />
+        <item
+            android:id="@+id/nav_more"
+            android:icon="@mipmap/ic_share"
+            android:title="More Apps" />
     </group>
 
 
