--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="gray">#E6E7E8</color>
     <color name="questionTextDefault">#6D6E70</color>
     <color name="transparent">@android:color/transparent</color>
+    <color name="appcolor">#F701FC</color>
 </resources>
