--- a/app/src/main/res/layout/signup.xml
+++ b/app/src/main/res/layout/signup.xml
@@ -44,6 +44,7 @@
                     android:hint="@string/hint_name"
                     android:paddingLeft="@dimen/text_10"
                     android:paddingRight="@dimen/text_10"
+                    android:singleLine="true"
                     android:imeOptions="actionNext"/>
 
             </android.support.design.widget.TextInputLayout>
@@ -59,6 +60,7 @@
                     android:hint="@string/hint_email"
                     android:paddingLeft="@dimen/text_10"
                     android:paddingRight="@dimen/text_10"
+                    android:singleLine="true"
                     android:inputType="textEmailAddress"
                     android:imeOptions="actionDone"/>
 
