--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -10,6 +10,7 @@
     <dimen name="text_5">5sp</dimen>
     <dimen name="text_14">14sp</dimen>
     <dimen name="text_12">12sp</dimen>
+    <dimen name="text_15">15sp</dimen>
     <dimen name="text_18">18sp</dimen>
 
     <dimen name="dimen_20">20dp</dimen>
